--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,16 +20,17 @@ jobs:
         run: git clone https://github.com/vivo-project/Vitro.git ../Vitro
 
       - name: Maven Cache
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-cache-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-cache-m2-
 
       - name: Setup Java
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v4
         with:
           java-version: 11
+          distribution: 'temurin'
           server-id: ossrh
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
