Migrating from OSSRH to Central Publisher Portal

--- a/installer/pom.xml
+++ b/installer/pom.xml
@@ -250,16 +250,22 @@
             <name>VIVO Dependencies</name>
             <url>https://raw.github.com/vivo-project/dependencies/main/</url>
         </repository>
+
         <repository>
-            <id>sonatype-nexus-snapshots</id>
-            <name>Sonatype Nexus Snapshots</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <id>central</id>
+            <name>Sonatype Central Snapshots</name>
+            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
             <releases>
                 <enabled>false</enabled>
             </releases>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
+        </repository>
+
+        <repository>
+            <id>central-maven</id>
+            <url>https://repo.maven.apache.org/maven2</url>
         </repository>
     </repositories>
 </project>
