Modified and renamed configuration property to context.path.exclude

--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -32,9 +32,9 @@
   #
 Vitro.defaultNamespace = http://vivo.mydomain.edu/individual/
 
-# In case VIVO is behind proxy you might want to avoid redirects by overriding
-# context path to empty string or other custom value
-# context.path=
+# To exclude tomcat application context name from generated links uncomment following line.
+# Default value is false
+# context.path.exclude = true
 
   #
   # The email address of the root user for the VIVO application. The password
