fix: improved description text for new configuration property in example.runtime.properties

--- a/home/src/main/resources/config/example.runtime.properties
+++ b/home/src/main/resources/config/example.runtime.properties
@@ -32,8 +32,8 @@
   #
 Vitro.defaultNamespace = http://vivo.mydomain.edu/individual/
 
-# To exclude tomcat application context name from generated links uncomment following line.
-# Default value is false
+# To exclude the Tomcat application context name from generated links uncomment following line.
+# Default value is false.
 # context.path.exclude = true
 
   #
