Added lighter shade for secondary color in wilma and added support for hidden inputs

--- a/webapp/src/main/webapp/themes/wilma/theme-config.json
+++ b/webapp/src/main/webapp/themes/wilma/theme-config.json
@@ -36,6 +36,27 @@
                 "groupName": "secondary",
                 "colors": [
                     {
+                        "name": "secondary-extralight",
+                        "value": "#E4ECF3",
+                        "cssVariable": "--secondary-color-extralight",
+                        "shade": {
+                            "type": "lighten",
+                            "amount": 90,
+                            "base": "secondary-base"
+                        }
+                    },
+                    {
+                        "name": "secondary-lighter",
+                        "value": "#DFE6E5",
+                        "cssVariable": "--secondary-color-lighter",
+                        "hidden": true,
+                        "shade": {
+                            "type": "lighten",
+                            "amount": 80,
+                            "base": "secondary-base"
+                        }
+                    },
+                    {
                         "name": "secondary-base",
                         "value": "#398aac",
                         "cssVariable": "--secondary-color"
