Fixed palette typo

--- a/webapp/src/main/webapp/themes/nemo/theme-config.json
+++ b/webapp/src/main/webapp/themes/nemo/theme-config.json
@@ -1,7 +1,7 @@
 {
     "themeName": "nemo",
     "themeColors": {
-        "pallete": [
+        "palette": [
             {
                 "groupName": "primary",
                 "colors": [
