--- a/webapp/src/main/webapp/themes/tenderfoot/theme-config.json
+++ b/webapp/src/main/webapp/themes/tenderfoot/theme-config.json
@@ -1,7 +1,7 @@
 {
     "themeName": "tenderfoot",
     "themeColors": {
-        "pallete": [
+        "palette": [
             {
                 "groupName": "primary",
                 "colors": [
