Add extension tag into for publishing plugin

--- a/pom.xml
+++ b/pom.xml
@@ -191,6 +191,7 @@
                         <groupId>org.sonatype.central</groupId>
                         <artifactId>central-publishing-maven-plugin</artifactId>
                         <version>0.6.0</version>
+                        <extensions>true</extensions>
                         <configuration>
                             <publishingServerId>central</publishingServerId>
                         </configuration>
@@ -436,14 +437,6 @@
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>buildnumber-maven-plugin</artifactId>
                     <version>1.4</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.sonatype.central</groupId>
-                    <artifactId>central-publishing-maven-plugin</artifactId>
-                    <version>0.6.0</version>
-                    <configuration>
-                        <publishingServerId>central</publishingServerId>
-                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
